--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -15,7 +15,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y gcovr
     - name: build
-      run: g++ -Wall -Wextra -fprofile-arcs -ftest-coverage -o testchecker *.cpp* *.cpp* ./source/*.cpp* ./test/*.cpp* 
+      run: g++ -Wall -Wextra -fprofile-arcs -ftest-coverage -o testchecker *.cpp* ./source/*.cpp* ./test/*.cpp* 
       
     - name: run
       run: ./testchecker
